[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/blocks.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Block Scripts/Mine.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/using.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound/Effects/mine_dirt.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/Effects/stone_block_move.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/Effects/mine_tree.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound/Effects/mine_copper.wav" type="AudioStream" id=7]

[node name="Mine" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 32, 32, 32 )

[node name="Using" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Wood" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Stone" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Copper" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Dirt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 0.138696
[connection signal="finished" from="Wood" to="." method="_on_Wood_finished"]
[connection signal="finished" from="Stone" to="." method="_on_Stone_finished"]
[connection signal="finished" from="Copper" to="." method="_on_Copper_finished"]
[connection signal="finished" from="Dirt" to="." method="_on_Dirt_finished"]
